# hysoc

./: .gitignore  .gitmodules  CLAUDE.md  Dasfaa-StreamTrajSeg.txt  HYSOC_Implementation_Checklist.md  README.md  TDT4501_Fordypningsoppgave.txt  pyproject.toml  stop_compression_experiment.md  trace.txt
.claude/: settings.local.json
notebooks/: demo_simulation.ipynb  explore_trajectories.ipynb  visualize_stss.ipynb
scripts/: EVALUATION_CONTRACT.md  clear_processed_data.py  demo_01_offline_stss_stop_compression.py  demo_02_offline_stss_and_squish.py  demo_03_online_step_stop_compression.py  demo_04_online_step_squish.py  demo_05_compare_stss_vs_step_stop_compression.py  demo_06_compare_stss_vs_step_squish.py  demo_07_offline_stc_oracle.py  demo_08_online_map_matching.py  demo_09_online_map_matching_compression.py  demo_10_offline_dp_oracle.py  demo_11_online_trace_compression.py  demo_12_dp_epsilon_sweep.py  demo_12_unified_hysoc_compressor.py  demo_13_dp_visualize.py  demo_14_hybrid_squish_dp_single.py  demo_15_hybrid_squish_dp_batch.py  demo_16_step_vs_stss_hybrid_ablation.py  demo_17_hysoc_g_evaluation.py  demo_18_hysoc_g_vs_oracles.py  demo_19_compare_stss_vs_step_stop_points.py  demo_20_unified_hysoc_compressor.py  demo_21_hysoc_vs_oracles.py  demo_22_prepare_london_m25_graph.py  demo_23_hysoc_vs_oracles_cached_graph.py  demo_24_unified_hysoc_compressor_batch.py  demo_25_oracle_n_hysoc_n_diagnostics.py  demo_26_hysoc_vs_oracles_live_graph.py  demo_27_step_stss_param_sweep.py  demo_28_aggregate_param_sweep.py  demo_29_nyc_trajectories_map.py  demo_full_flow.py  (+9 more)
(+1438 files in other folders)
